--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "test": "npx jest ./spec"
+    "test": "npx jest "
   },
   "keywords": [],
   "author": "",
